changed some spacing issues with forms

--- a/woofli_be_v2.0/woofli_front_end/content/styles/container.scss
+++ b/woofli_be_v2.0/woofli_front_end/content/styles/container.scss
@@ -8,9 +8,9 @@
 
     &__form {
 
-        margin-top: 20vh;
+        margin-top: 5vh;
         @media #{$mobile-only} {
-        margin-top: 15vh;
+            margin-top: 2.5vh;
         }
     }
 
